cmake_minimum_required(VERSION 3.5)
add_executable(main Test.cxx)
find_library(BTPARSER NAMES libbtparser.so ${CMAKE_SOURCE_DIR})
find_library(GLIB NAMES libglib-2.0.so "/grid/common/pkgsData/glib-v2.48.0/Linux/CentOS6.0-2015-x86_64/lib")
target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/3rd)
target_link_libraries(main ${BTPARSER})
target_link_libraries(main ${GLIB})
install(FILES main RUNTIME DESTINATION ${CMAKE_BINARY_DIR})
